--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,54 @@
 {
-    "builds":[{
-        "src":"base/wsgi.py",
-        "use":"@vercel/python",
-        "config":{"maxLambdaSize":"15mb","runtime":"python3.10"}
-    }],
-    "routes":[
-        {
-            "src":"/(.*)",
-            "dest":"base/wsgi.py"
-        }
+
+    "version": 2,
+
+    "builds": [
+
+    {
+
+    "src": "base/wsgi.py",
+
+    "use": "@vercel/python",
+
+    "config": { "maxLambdaSize": "15mb", "runtime": "python3.10" }
+
+    },
+
+    {
+
+    "src": "build_files.sh",
+
+    "use": "@vercel/static-build",
+
+    "config": {
+
+    "distDir": "staticfiles_build"
+
+     }
+
+    }
+
+    ],
+
+    "routes": [
+
+    {
+
+    "src": "/static/(.*)",
+
+    "dest": "/static/$1"
+
+    },
+
+    {
+
+    "src": "/(.*)",
+
+    "dest": "base/wsgi.py"
+
+    }
+
     ]
-}
+
+    }
+
